# mathgeniuszach.github.io

./: .eslintrc.json  .gitignore  .gitmodules  .parcelrc  .posthtmlrc  CNAME  README.md  about.html  apps.html  coi-serviceworker.min.js  footer.html  header.html  home.css  index.065cf6e2.js  index.33ee32e4.css  index.3465222d.css  index.394c0ab2.css  index.4767d17b.css  index.630b04d3.css  index.6aa6ab9e.css  index.6ac43ba7.js  index.963c9938.css  index.b5335759.css  index.bec32333.css  index.cae293d7.js  index.cb2a24a2.css  index.css  index.d4339f6f.css  index.db746d0a.css  index.dd741c7a.css  index.e49ba04c.css  index.ebccac8a.css  index.f7996535.js  index.html  index.js  main.css  main.js  package.json  pnpm-lock.yaml  redirects.csv  (+1 more)
apps/: index.html  origincreator-data.js  origincreator-form.js  origincreator-io.js  origincreator-z.js  origincreator.css  origincreator.html  origincreator.js
cparceler/: index.js
css/: main.css  origincreator.css
docs/: CNAME  index.html  portfolio.css
electron/: flyout.html  index.js  package-lock.json  package.json  pnpm-lock.yaml  preload.js  pyproject.toml  update.py  urls.txt
electron/app/: index.html  index.js
electron/app/apps/: index.html
electron/app/apps/nothing/: index.html
electron/app/apps/origin-creator/help/: index.html  index.js
electron/app/response/be-direct/: index.html
electron/app/response/be-patient/: index.html
electron/app/response/deep-end-teaching/: index.html
electron/app/response/oc-no-show/: index.html
electron/app/response/oc-pehkui/: index.html
extras/: threestages.html
(+299 files in other folders)
