[tool.poetry]
name = "updater"
version = "0.1.0"
description = ""
authors = ["Zach K <huntingmanzach@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mkdocs = "^1.6.0"
jinja2 = "^3.1.4"
mkdocs-autorefs = "^1.0.1"
mkdocs-redirects = "^1.2.1"
mkdocs-alias-plugin = "^0.8.1"
mkdocs-categories-plugin = "^0.5.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
